--- a/ismokeitemeditor.kv
+++ b/ismokeitemeditor.kv
@@ -42,7 +42,7 @@
         size_hint_y: None
         height: 30
         Label:
-            text: "Najit: "
+            text: "Search: "
             color: 0, 0, 0, 1
             size_hint_x: None
             width: 60
@@ -65,7 +65,7 @@
         size_hint_y: None
         height: 30
         Label:
-            text: 'Mnozstvi: '
+            text: 'Amount: '
             color: [0, 0, 0, 1]
             size_hint_x: None
             width: 60
@@ -75,10 +75,10 @@
             input_filter: 'int'
             cursor_color: 0.5, 0.5, 0.5, 1
         Button:
-            text: 'Pridat'
+            text: 'Add'
             on_press: root.add_item()
         Button:
-            text: 'Prodat'
+            text: 'Sell'
             on_press: root.sell_item()
 
     TextInput:
